content/assets/css/index.css
/* ... */
#mwrap {
    display: inline-block;
    float: right;
    padding-right: 3%;
    padding-top: 4%;
    display: none;
    z-index: 1000;
}

#lt,
#lm,
#lb {
    width: 20px;
    height: 3px;
    margin-bottom: 2px;
}

.desktopScreenNavbar {
    background: red;
    -webkit-transition: background 1s ease;
    -moz-transition: background 1s ease;
    -ms-transition: background 1s ease;
    -o-transition: background 1s ease;
    transition: background 1s ease;
}

.desktopScreenNavbarDropDownMenu {
    background: #373737;
    -webkit-transition: background 1s ease;
    -moz-transition: background 1s ease;
    -ms-transition: background 1s ease;
    -o-transition: background 1s ease;
    transition: background 1s ease;
    color: white;
}

.mobileScreenNavbar {
    background: #373737;
}

.mobileScreenNavbarDropDownMenu {
    background: #373737;
    color: white;
}

nav ul li a {
    font-size: 20px;
}

nav li li a {
    font-size: 14px;
}

.desktopScreenNavbar,
nav ul ul,
.navb,
.mobileScreenNavbar,
.mobileb {
    background-color: rgba(255, 255, 255, .9);
}

.navul {
    background: none;
}

#container img {
    width: 100%;
    height: auto;
    position: relative;
    text-align: center;
}

.centered {
    position: absolute;
    top: 35vw;
    left: 50%;
    transform: translate(-50%, -50%);
    color: rgb(255, 255, 255);
    font-size: 60px;
    text-align: center;
}

#titlelogo h1 {
    font-size: 26px;
}

.homeText {
    font-size: 18px;
    margin: 80px;
}

footer {
    background-color: darkblue;
    color: white;
}

#titlelogo {
    background-color: rgb(255, 255, 255, 0);
    width: 100%;
    -webkit-transition: background-color 1s;
    -moz-transition: background-color 1s;
    transition: background-color 1s;
}

.login {
    position: relative;
    top: 100px;
    left: 40%;
    font-size: 20px;
    height: 800px;
}

hr {
    height: 3px;
    width: 700px;
    color: white;
    background-color: white;
}

.honeypot {
    position: absolute;
    left: -9999px;
}

.formDiv {
    font-size: 25px;
    text-align: center;
    margin: auto;
    width: 800px;
}

.contact {
    font-size: 12px;
    width: 600px;
}

.contactButton {
    font-size: 12px;
}

.navigation {
    margin-right: 45px;
}

#menu,
#menuToggle {
    display: none;
}

@media only screen and (max-device-width: 1000px),
(max-width: 1000px) {
    .current {
        border-bottom: 2px solid;
        margin-right: 20px;
        width: 50%;
    }
    .navigation {
        display: none;
    }
    a:hover {
        opacity: 0.5;
    }
    ul {
        padding: 0;
        list-style-type: none;
    }
    #menuToggle {
        display: flex;
        flex-direction: column;
        position: absolute;
        top: -70px;
        right: 70px;
        z-index: -1;
        -webkit-user-select: none;
        user-select: none;
        background-color: #ffffff;
        width: 40px;
        text-align: center;
    }
    #menuToggle input {
        display: flex;
        width: 40px;
        height: 32px;
        position: absolute;
        cursor: pointer;
        opacity: 0;
        z-index: 2;
    }
    #menuToggle span {
        display: flex;
        width: 45px;
        height: 8px;
        margin-bottom: 8px;
        position: relative;
        background: #080808;
        border-radius: 3px;
        z-index: 1;
        transform-origin: 5px 0px;
        transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0), background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0), opacity 0.55s ease;
    }
    #menuToggle span:first-child {
        transform-origin: 0% 0%;
    }
    #menuToggle span:nth-last-child(2) {
        transform-origin: 0% 100%;
    }
    #menuToggle input:checked~span {
        opacity: 1;
        transform: rotate(45deg) translate(-3px, -1px);
        background: #36383F;
    }
    #menuToggle input:checked~span:nth-last-child(3) {
        opacity: 0;
        transform: rotate(0deg) scale(0.2, 0.2);
    }
    #menuToggle input:checked~span:nth-last-child(2) {
        transform: rotate(-45deg) translate(0, -1px);
    }
    #menu {
        font-size: 18px;
        display: block;
        position: absolute;
        width: 500px;
        height: 400px;
        box-shadow: 0 0 10px #85888C;
        margin: -50px 0 0 -540px;
        padding: 50px;
        padding-top: 125px;
        background-color: rgba(255, 255, 2555, 0.6);
        -webkit-font-smoothing: antialiased;
        transform-origin: 0% 0%;
        transform: translate(150%, 0);
        transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0);
    }
    #menu li {
        font-size: 18px;
        padding: 10px 0;
        transition-delay: 2s;
    }
    #menu a {
        font-size: 18px;
    }
    #menuToggle input:checked~ul {
        transform: none;
    }
}

